<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/exerciseThree"
    android:orientation="vertical"
    tools:context="com.example.android.funexercises.ExerciseThreeActivity">

    <!-- For the user to type in a number, to set the deck size-->
    <EditText
        android:id="@+id/number_of_cards"
        style="@style/ExerciseStyle"
        android:layout_marginBottom="@dimen/paddingOrMar_XXXL"
        android:layout_marginTop="@dimen/paddingOrMar_XXL"
        android:background="@color/exerciseTwo_ParagraphOne"
        android:inputType="number"
        android:text="@string/number_of_cards" />

    <!-- For the user to tap, to generate a randomized deck, with as many cards as specified above.-->
    <!-- If user hasn't used the above EditText before tapping, it takes 0 as its parameter-->
    <TextView
        style="@style/ExerciseStyle"
        android:layout_marginBottom="@dimen/paddingOrMar_XXL"
        android:background="@color/exerciseThree_ParagraphOne"
        android:onClick="createDeck"
        android:text="@string/generate_deck" />

    <!-- Button hooked to a method that will shuffle the deck:
    create a new deck with the same elements but different indeces-->
    <Button
        style="@style/ExerciseStyle"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/paddingOrMar_XXL"
        android:background="@drawable/mybutton"
        android:onClick="shuffleDeck"
        android:text="@string/shuffle"
        android:textStyle="normal" />

    <!-- Button hooked to a method that will draw a card from the deck & display it in the TextView below this button-->
    <Button
        style="@style/ExerciseStyle"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/paddingOrMar_XXL"
        android:background="@drawable/mybutton2"
        android:onClick="drawCard"
        android:text="@string/draw_a_card"
        android:textStyle="normal" />

    <!-- Displays the card drawn generated by the above button's related method.-->
    <TextView
        android:id="@+id/drawn_card_displayed"
        style="@style/ExerciseStyle"
        android:background="@color/exerciseThree_ParagraphOne"
        android:text="@string/card_drawn" />

</LinearLayout>


